fix spacing and ingredients flexbox

--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ li {
   display: flex;
   flex-direction: column;
   margin: 0;
-  max-width: 375px;
 }
 
 .recipe-image {
@@ -173,6 +172,9 @@ li {
 .ingredients {
   border-bottom: 1px solid var(--color-stone-150);
   padding: var(--spacing-200) 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .ingredients-list {
@@ -256,7 +258,7 @@ li {
     padding: 1em;
     background-color: var(--color-white);
     padding: var(--spacing-500) var(--spacing-500) 0;
-    margin: 0;
+    margin-top: var(--spacing-600);
   }
   .container {
     background-color: var(--color-white);
